# pydataladies-dashboard

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: dashboardy-1.ipynb  dashboardy-2.ipynb
