[tool.poetry]
name = "dashboard-streamlit"
version = "0.1.0"
description = ""
authors = ["Jakub Urban <coobas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.8,<3.11"
pandas = ">=1.2.4,<2.0"
streamlit = "1.14.0"
plotly = "5.11.0"
# fixing https://github.com/protocolbuffers/protobuf/issues/10571
protobuf = "3.20.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.0"
pytest = "^7.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.15.3"
ipython = "^8.5.0"
watchdog = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
